<?php

declare(strict_types=1);

namespace App\Entity\Post;

final class Tag
{
    private $name;
}
